# humla

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
audio-capture/: Package.swift
audio-capture/Sources/audio-capture/: main.swift
docs/design/: stt-adapter.md
docs/superpowers/plans/: 2026-05-06-stt-adapter-phase1.md
marketing/: .gitignore
marketing/reddit/: README.md
marketing/reddit/routines/: draft-friday.prompt.md  historical-scan.md  historical-scan.prompt.md  karma-builder.md  karma-builder.prompt.md  lead-finder.md  lead-finder.prompt.md  reply-watcher.md  reply-watcher.prompt.md  research-and-drafts.md  research-monday.prompt.md
scripts/: build-diarize.sh  build-icon.sh  build-metallib.sh  build-sidecar.sh  release.sh  squircle-icon.swift
speaker-diarize/: Package.swift
speaker-diarize/Sources/speaker-diarize/: main.swift
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  diarize.rs  lib.rs  llm_discovery.rs  local_llm.rs  local_whisper.rs  main.rs  openai.rs  presets.rs  recording.rs  speechmatics.rs  wav.rs
src-tauri/src/stt/: adapter.rs  auth.rs  config.rs  groq.rs  local.rs  mod.rs  openai.rs  openai_compat.rs
src/components/: ContextMenu.tsx  Editor.tsx  ErrorBoundary.tsx  Layout.tsx  Permissions.tsx  PolishToast.tsx  RecordingBar.tsx  Sidebar.tsx  SidebarCollapsed.tsx  Skeleton.tsx  Toaster.tsx  TopBar.tsx  Updater.tsx
src/lib/: ipc.ts  palette.ts  presets.ts  shortcuts.ts  slash.tsx  store.ts  theme.ts  useDeveloperMode.ts
src/pages/: Folder.tsx  Home.tsx  Note.tsx  Settings.tsx
src/pages/settings/: SettingsLayout.tsx  types.ts  useSettings.ts
src/pages/settings/components/: ApiKeyField.tsx  Btn.tsx  DiarizeModelManager.tsx  LocalModelManager.tsx  Modal.tsx  Section.tsx  Select.tsx  SummaryPromptsManager.tsx  format.ts
src/pages/settings/tabs/: About.tsx  ApiKeys.tsx  General.tsx  Summary.tsx  Transcription.tsx
src/styles/: globals.css
