[package]
name = "humla"
version = "0.1.2"
description = "Humla — personal meeting notes that hum along"
authors = ["Michael Wilhelmsen"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "humla_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
whisper-rs = { version = "0.13", features = ["metal"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
parking_lot = "0.12"
dirs = "5"
libc = "0.2"
tauri-plugin-process = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
