[package]
name = "humla"
version = "0.6.3"
description = "Humla — personal meeting notes that hum along"
authors = ["Michael Wilhelmsen"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "humla_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
whisper-rs = { version = "0.13", features = ["metal"] }
# llama-cpp-2 = "0.1" — removed: linking it alongside whisper-rs ships two
# copies of GGML in the same binary, and Metal backend registration aborts on
# the duplicate. Local LLM inference will move to a sidecar process to
# isolate the GGMLs (matching the audio-capture + speaker-diarize pattern).
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
parking_lot = "0.12"
dirs = "5"
libc = "0.2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
